force-app/main/default/objects/ObjectJan25__c/ObjectJan25__c.object-meta.xml
<CustomObject>
    <label>ObjectJan25</label>
    <nameField>
        <label>ObjectJan25 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectJan25s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>