force-app/main/default/objects/ObjectJan25__c/fields/May25Checkbox__c.field-meta.xml
<CustomField>
    <fullName>May25Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>May25Checkbox</label>
    <type>Checkbox</type>
</CustomField>