force-app/main/default/objects/ObjectJan25__c/fields/May25Text__c.field-meta.xml
<CustomField>
    <fullName>May25Text__c</fullName>
    <label>May25Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>