force-app/main/default/objects/ObjectJan25__c/fields/ObjectJan25_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>ObjectJan25_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ObjectJan25 Checkbox</label>
    <type>Checkbox</type>
</CustomField>