force-app/main/default/objects/ObjectJan25__c/fields/ObjectJan25_Date__c.field-meta.xml
<CustomField>
    <fullName>ObjectJan25_Date__c</fullName>
    <label>ObjectJan25 Date</label>
    <type>Date</type>
</CustomField>