force-app/main/default/objects/ObjectJan25__c/fields/ObjectJan25_Text__c.field-meta.xml
<CustomField>
    <fullName>ObjectJan25_Text__c</fullName>
    <label>ObjectJan25 Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>